# cursor-api

./: .env.example  .gitignore  Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
crates/__build/: Cargo.toml
crates/atomic_enum/: Cargo.toml
crates/grpc-stream/: Cargo.toml
crates/interned/: Cargo.toml
crates/manually_init/: Cargo.toml
crates/proto-value/: Cargo.toml
crates/rep_move/: Cargo.toml
doc/: build-frontend-zip.md  debug.md  security-analysis.md  troubleshoot-503-and-test.md  usage-and-config.md
patch/lzma-rust2-0.16.2/: Cargo.toml
patch/macros/: Cargo.toml
patch/scc-3.4.8/: Cargo.toml
scripts/: build-frontend-zip.sh  build-zip.js  cursor-api.service  install-service.sh  package-lock.json  package.json  service-control.sh  uninstall-service.sh
src/: main.rs  natural_args.rs
src/app/constant/header/: version.rs
src/app/model/: cursor_version.rs
src/core/: service.rs
src/core/adapter/: openai.rs
src/core/model/: openai.rs
src/core/service/backend/: chat_completions.rs
static/: shared.js  tokens.html
