cargo-features = ["edition2024"]

[package]
name = "cursor-api-build"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
