cargo-features = ["edition2024"]

[package]
name = "grpc-stream"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bytes = "1"
flate2 = "1"
prost = { version = "0.14", default-features = false }
