cargo-features = ["edition2024"]

[package]
name = "manually_init"
version = "0.0.0"
edition = "2024"
authors = ["wisdgod <nav@wisdgod.com>"]
description = "A format compatibility layer for the Cursor API"
license = "MIT OR Apache-2.0"

[dependencies]

[features]
default = []
sync = []

[package.metadata.docs.rs]
all-features = true
